
bin_PROGRAMS = \
                triangles \
                lighting \
                lighting_perpixel \
                texture \
                multi_texture \
                fog \
                color_picker \
                point_sprites \
                blur \
                color_saturation \
                compositor \
                textureregion

triangles_SOURCES = triangles.cpp
lighting_SOURCES = lighting.cpp
lighting_perpixel_SOURCES = lighting_perpixel.cpp
texture_SOURCES = texture.cpp
multi_texture_SOURCES = multi_texture.cpp
fog_SOURCES = fog.cpp
color_picker_SOURCES = color_picker.cpp
point_sprites_SOURCES = point_sprites.cpp
blur_SOURCES = blur.cpp
color_saturation_SOURCES = color_saturation.cpp
compositor_SOURCES = compositor.cpp
textureregion_SOURCES = textureregion.cpp

INCLUDES = -Icommon
LIBS = -lGL -lglut
CPPFLAGS =
CXXFLAGS = -g3 -Wall -DGL_GLEXT_PROTOTYPES -Wno-unused-function
CFLAGS = -g3 -Wall
LDFLAGS =

